# PM_proyecto_final

./: README.md
rosbags/: no_obstacles_1.bag  no_obstacles_2.bag  no_obstacles_3.bag  no_obstacles_4.bag  no_obstacles_5.bag  obstacles_1.bag  obstacles_2.bag  obstacles_3.bag  obstacles_4.bag  obstacles_5.bag
src/graphical_client/: CMakeLists.txt  graphical_client_node.cpp  package.xml  soccerview.cpp
src/graphical_client/include/: gltext.h  soccerview.h  structures.h
src/graphical_client/launch/: graphical_client.launch
src/graphical_client/msg/: Pose2D_Array.msg
src/pub_example/: CMakeLists.txt  package.xml
src/pub_example/py/: publisher.py
src/ssl_shared_library/: CMakeLists.txt  package.xml
